--- a/custom_components/grill_eye/manifest.json
+++ b/custom_components/grill_eye/manifest.json
@@ -1,23 +1,23 @@
 {
-  "domain": "grill_eye",
-  "name": "GrillEye Integration",
-  "bluetooth": [
-    {
-      "local_name": "GrillEye*"
-    }
-  ],
+  "domain": "integration_blueprint",
+  "name": "Integration blueprint",
   "codeowners": [
-    "@n3utrino"
+    "@ludeeus"
   ],
-  "config_flow": false,
-  "dependencies": [
-    "bluetooth_adapters"
+  "config_flow": true,
+  "documentation": "https://github.com/ludeeus/integration_blueprint",
+  "iot_class": "cloud_polling",
+  "issue_tracker": "https://github.com/ludeeus/integration_blueprint/issues",
+  "version": "0.0.0"
+}{
+  "domain": "integration_blueprint",
+  "name": "Integration blueprint",
+  "codeowners": [
+    "@ludeeus"
   ],
-  "documentation": "https://github.com/n3utrino/ha-grill-eye",
-  "iot_class": "local_polling",
-  "issue_tracker": "https://github.com/n3utrino/ha-grill-eye/issues",
-      "requirements": [
-    "bleak"
-  ],
+  "config_flow": true,
+  "documentation": "https://github.com/ludeeus/integration_blueprint",
+  "iot_class": "cloud_polling",
+  "issue_tracker": "https://github.com/ludeeus/integration_blueprint/issues",
   "version": "0.0.0"
 }
