--- a/custom_components/grill_eye/manifest.json
+++ b/custom_components/grill_eye/manifest.json
@@ -1,12 +1,23 @@
 {
-  "domain": "integration_blueprint",
-  "name": "Integration blueprint",
-  "codeowners": [
-    "@ludeeus"
+  "domain": "grill_eye",
+  "name": "GrillEye Integration",
+  "bluetooth": [
+    {
+      "local_name": "GrillEye*"
+    }
   ],
-  "config_flow": true,
-  "documentation": "https://github.com/ludeeus/integration_blueprint",
-  "iot_class": "cloud_polling",
-  "issue_tracker": "https://github.com/ludeeus/integration_blueprint/issues",
+  "codeowners": [
+    "@n3utrino"
+  ],
+  "config_flow": false,
+  "dependencies": [
+    "bluetooth_adapters"
+  ],
+  "documentation": "https://github.com/n3utrino/ha-grill-eye",
+  "iot_class": "local_polling",
+  "issue_tracker": "https://github.com/n3utrino/ha-grill-eye/issues",
+  "requirements": [
+    "bleak"
+  ],
   "version": "0.0.0"
 }
